tests/should_fail/sf009_lambda_no_arrow.hs
-- Should fail: lambda missing the -> arrow
module Sf009LambdaNoArrow where

f :: Int -> Int
f = \x x
